--- a/makefile_vc
+++ b/makefile_vc
@@ -1,4 +1,4 @@
-# Plugin stuff: part 1.
+﻿# Plugin stuff: part 1.
 # (See part 2 at the end of file.)
 NAME = Chromium-CppStyle-Assistant
 NAME_SHORT = cc_assistant
