--- a/makefile_gcc
+++ b/makefile_gcc
@@ -5,6 +5,7 @@ SRCS = cc_assistant.cpp \
        config_settings.cpp \
        constants.cpp \
        dlgbuilderex/bindings/plugin_color_edit_field_binding.cpp \
+       dlgbuilderex/bindings/plugin_uint_edit_field_binding.cpp \
        dlgbuilderex/plugin_dialog_builder_ex.cpp \
        globals.cpp \
 
