Speed up file masks matching by using a cache editor->match. The cache is invalidated if file masks/enabled settings are changed and if a editor filename changes e.g. due Save As operation or simply closed. The cache object is not created at all (or dropped) when it is not usable: i.e. if file masks is empty or no feature is enabled.

--- a/makefile_gcc
+++ b/makefile_gcc
@@ -7,6 +7,7 @@ SRCS = cc_assistant.cpp \
        dlgbuilderex/bindings/color_edit_field_item_binding.cpp \
        dlgbuilderex/bindings/uint_edit_field_item_binding.cpp \
        dlgbuilderex/plugin_dialog_builder_ex.cpp \
+       editor_filename_match_cache.cpp \
        globals.cpp \
 
 # System stuff (copied and adopted from Far sources).
