--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿/debug.32.gcc/*
-/debug.64.gcc/*
-/final.32.gcc/*
-/final.64.gcc/*
+﻿/debug.*32.gcc/*
+/debug.*64.gcc/*
+/final.*32.gcc/*
+/final.*64.gcc/*
